--- a/hybrid machine learning.ipynb
+++ b/hybrid machine learning.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "7f56ea02",
+   "execution_count": 53,
+   "id": "58bdd474",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "78aeb533",
+   "execution_count": 54,
+   "id": "091a8d1b",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "        2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,8 +193,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "89e2bfe5",
+   "execution_count": 55,
+   "id": "296cbea4",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "((112, 4), (38, 4), (112,), (38,))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,17 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "0180551e",
+   "execution_count": 56,
+   "id": "2cd0dd1c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.9736842105263158"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,17 +241,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "0c2a8515",
+   "execution_count": 57,
+   "id": "e84bb76f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9736842105263158"
+       "0.9473684210526315"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,8 +265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "53f42cd4",
+   "execution_count": 58,
+   "id": "bf173689",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "0.9736842105263158"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,17 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "a416ce64",
+   "execution_count": 59,
+   "id": "fdecae70",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9473684210526315"
+       "0.9736842105263158"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,8 +313,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "0db5539c",
+   "execution_count": 60,
+   "id": "e746cb19",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "0.9473684210526315"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,8 +337,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "d830876b",
+   "execution_count": 61,
+   "id": "90ee68ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,11 +366,11 @@
     "svc = Pipeline([('m', SVC())])\n",
     "models.append(('svc', svc))\n",
     "\n",
-    "lr = Pipeline([('m', LogisticRegression())])\n",
-    "models.append(('logistic', lr))\n",
+    "log = Pipeline([('m', LogisticRegression())])\n",
+    "models.append(('logistic', log))\n",
     "\n",
-    "nb = Pipeline([('m', GaussianNB())])\n",
-    "models.append(('naivebayes', nb))\n",
+    "naive = Pipeline([('m', GaussianNB())])\n",
+    "models.append(('naivebayes', naive))\n",
     "\n",
     "\n",
     "# define the voting ensemble\n",
@@ -379,8 +379,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "4c0bfb63",
+   "execution_count": 62,
+   "id": "e71de205",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        " ('naivebayes', Pipeline(steps=[('m', GaussianNB())]))]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,8 +404,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "7e4a6f2e",
+   "execution_count": 63,
+   "id": "01a79ac5",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "                              Pipeline(steps=[('m', GaussianNB())]))])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,8 +435,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "106a997e",
+   "execution_count": null,
+   "id": "7dc94665",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,42 +446,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "7f6a6ad4",
+   "execution_count": null,
+   "id": "9846af98",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9603333333333335"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_scores.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "2fa833b7",
+   "execution_count": null,
+   "id": "26bf1f0a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_scores.max()"
    ]
@@ -489,7 +467,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18c5a635",
+   "id": "69315f9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ensemble.fit(x_train,y_train)\n",
+    "ensemble.score(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72df0ab1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report, confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c519337",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr.classification_report(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "832d6644",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -497,7 +506,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e430d5df",
+   "id": "018a09ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "211ae487",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5740ba97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13ec76fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0eb40a9b",
    "metadata": {},
    "outputs": [],
    "source": []
